--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="nav navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="#about"
                 >About Me <span class="sr-only">(current)</span></a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#history">History</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
@@ -134,15 +131,23 @@
               a business mindset to deliver continuous improvement, compliance,
               and innovation projects. I have earned a Bachelor’s Degree in
               Computer Science, a Master’s Degree in Project Management, and
-              most recently, a Professional Certificate in Project Management,
-              and I am currently enrolled in the
-              <strong>Flex Stack Coding Boot Camp</strong> at
-              <strong>Kansas University</strong>.
+              most recently, a Professional Certificate in Project Management.
             </p>
             <p>
               I specialize in building applications for desktop, web, and mobile
-              devices. I enjoy learning new topics about business and
-              technology, and I love spending time with my wife and my two kids.
+              devices, and I enjoy learning new topics about business and
+              technology; for example, I am currently enrolled in the
+              <strong>Flex Stack Coding Boot Camp</strong> at
+              <strong>Kansas University</strong> where I am learning and
+              developing web and mobile applications by applying the latest
+              technologies using HTML, CSS, JavaScript, and frameworks and
+              libraries like Bootstrap, JQuery, NodeJS, DayJS, Google Fonts,
+              Font Awesome, and many more.
+            </p>
+            <p>
+              On my spare time, I enjoy reading books, playing chess and
+              basketball with family and friends, and, of course, investing
+              quality time with my wife and my two kids.
             </p>
             <div class="polaroid">
               <img
@@ -165,58 +170,6 @@
         </div>
       </section>
       <!-- End of About Me -->
-      <!-- History -->
-      <section id="history">
-        <h1 class="display-4">
-          History
-          <button
-            class="btn btn-warning"
-            type="button"
-            data-toggle="collapse"
-            data-target="#aboutChocoyos"
-            aria-expanded="false"
-            aria-controls="aboutChocoyos"
-            id="showAboutChocoyos"
-          >
-            <i
-              class="fas fa-chevron-up"
-              aria-hidden="true"
-              id="showAboutChocoyosIcon"
-            ></i>
-          </button>
-        </h1>
-        <div class="collapse" id="aboutChocoyos">
-          <div class="card card-body">
-            <p>
-              As an American-Nicaraguan citizen, I intend to create some
-              interest in this beautiful bird commonly known as
-              <strong>chocoyo</strong> by disseminating information about the
-              species and where to find it.
-            </p>
-            <p>
-              Below is a quote from Wikipedia providing some useful information:
-            </p>
-            <p>
-              The <em>Pacific parakeet</em> or
-              <em>Nicaraguan green conure</em> (Psittacara strenuus) is a
-              species of parakeet. Some ornithologists consider it a subspecies
-              of the green parakeet (Psittacara holochlorus), however it is
-              considered a full species according to the IOC World Bird List.[1]
-            </p>
-            <p>
-              This bird is endemic to a small area in western Nicaragua, the
-              <strong>Brujo Natural Reserve</strong>. Nesting sites lie within
-              this protected area, but the birds still face threats from the
-              outside world when they leave the reserve to feed. Nonetheless,
-              its population is considered not immediately threatened
-              (especially compared to some of its relatives such as the Socorro
-              parakeet), and when BirdLife and the IUCN considered it a good
-              species, it was listed as 'least concern'.
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- End of History -->
       <!-- Projects -->
       <section id="projects">
         <h1 class="display-4">
@@ -276,11 +229,15 @@
                 <ul
                   class="d-flex flex-row justify-content-around list-group list-group-horizontal"
                 >
-                  <li><span class="badge badge-secondary">HTML</span></li>
-                  <li><span class="badge badge-secondary">CSS</span></li>
-                  <li><span class="badge badge-secondary">JavaScript</span></li>
-                  <li><span class="badge badge-secondary">BootStrap</span></li>
-                  <li><span class="badge badge-secondary">JQuery</span></li>
+                  <li><span class="badge badge-secondary p-3">HTML</span></li>
+                  <li><span class="badge badge-secondary p-3">CSS</span></li>
+                  <li>
+                    <span class="badge badge-secondary p-3">JavaScript</span>
+                  </li>
+                  <li>
+                    <span class="badge badge-secondary p-3">BootStrap</span>
+                  </li>
+                  <li><span class="badge badge-secondary p-3">JQuery</span></li>
                 </ul>
               </div>
             </div>
@@ -324,11 +281,15 @@
                 <ul
                   class="d-flex flex-row justify-content-around list-group list-group-horizontal"
                 >
-                  <li><span class="badge badge-secondary">HTML</span></li>
-                  <li><span class="badge badge-secondary">CSS</span></li>
-                  <li><span class="badge badge-secondary">JavaScript</span></li>
-                  <li><span class="badge badge-secondary">BootStrap</span></li>
-                  <li><span class="badge badge-secondary">JQuery</span></li>
+                  <li><span class="badge badge-secondary p-3">HTML</span></li>
+                  <li><span class="badge badge-secondary p-3">CSS</span></li>
+                  <li>
+                    <span class="badge badge-secondary p-3">JavaScript</span>
+                  </li>
+                  <li>
+                    <span class="badge badge-secondary p-3">BootStrap</span>
+                  </li>
+                  <li><span class="badge badge-secondary p-3">JQuery</span></li>
                 </ul>
               </div>
             </div>
@@ -369,9 +330,11 @@
                 <ul
                   class="d-flex flex-row justify-content-around list-group list-group-horizontal"
                 >
-                  <li><span class="badge badge-secondary">HTML</span></li>
-                  <li><span class="badge badge-secondary">CSS</span></li>
-                  <li><span class="badge badge-secondary">JavaScript</span></li>
+                  <li><span class="badge badge-secondary p-3">HTML</span></li>
+                  <li><span class="badge badge-secondary p-3">CSS</span></li>
+                  <li>
+                    <span class="badge badge-secondary p-3">JavaScript</span>
+                  </li>
                 </ul>
               </div>
             </div>
