--- a/index.html
+++ b/index.html
@@ -251,12 +251,17 @@
   </main>
   <!-- End of Main -->
   <!-- Footer -->
-  <footer id="contact">
+  <footer class="p-3" id="contact">
     <!-- Logo -->
-    <h1>Contact Me</h1>
-    <h2>
-      These are the ways you can find me, connect with me, or follow me:
-    </h2>
+    <h1 class="display-4">
+      Contact Me
+    </h1>
+    <p class="card-text">
+      Interested in knowing more about the <em>future</em> projects I
+      will be building? Want
+      to connect, follow, or contact me to know more about my
+      professional career? Contact me through any of the following means:
+    </p>
     <!-- End of Logo -->
     <!-- Navigation -->
     <nav>
@@ -293,5 +298,4 @@
   <script src="./assets/js/script.js"></script>
   <!-- End of JavaScript Libraries -->
 </body>
-
 </html>
