--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header -->
   <header>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-md">
       <h1 class="navbar-brand">Chocoyo Portfolio</h1>
       <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,17 +36,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Contact
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">E-Mail</a>
-              <a class="dropdown-item" href="https://linkedin.com/in/japinell" target="_blank">LinkedIn</a>
-              <a class="dropdown-item" href="https://github.com/japinell" target="_blank">GitHub</a>
-            </div>
           </li>
         </ul>
       </div>
