--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
                 am currently enrolled in the
                 <strong>Flex Stack Coding Boot Camp</strong> at
                 <strong>Kansas University</strong> where I am learning to
-                develop web and mobile applications using HTML, CSS,
-                JavaScript, and many other frameworks and libraries including
-                Bootstrap, JQuery, NodeJS, DayJS, Google Fonts, and Font
-                Awesome.
+                develop, test, and deploy web and mobile applications using HTML, CSS,
+                JavaScript, Bootstrap, Tailwind CSS, JQuery, Node.JS, Express.JS, Sequelize, MySQL, JawsDB, Express Handlebars, 
+                and other frameworks and libraries including Inquirer, Jest, Dotenv, Express Session, Connect Session Sequelize, 
+                Bcrypt, DayJS, Google Fonts, and Font Awesome.
               </p>
               <p class="card-text">
-                On my spare time, I enjoy reading books, playing chess and
-                basketball with family and friends, and, of course, investing
-                quality time with my wife and my kids.
+                On my spare time, I enjoy reading business, science, and technology books, playing chess and
+                basketball with family and friends, and, of course, playing and having fun with my wife and my two kids. I have
+                no pets as these little ones keep me busy already.
               </p>
               <p class="card-text">
-                Interested in knowing more about the <em>cool</em> projects I
+                Would you like to know more about the <em>cool</em> projects I
                 am building? Check them out <a href="#projects">here</a>. Want
-                to connect, follow, or contact me to know more about my
+                to connect, follow, or contact me to talk about my
                 professional career? Click <a href="#contact">here</a>.
               </p>
             </div>
